feat: Introduce StudentAffairsView for consolidated student management, add UserDAO, and enable grade entry in GradesView.